--- a/mywatchlist/templates/mywatchlist.html
+++ b/mywatchlist/templates/mywatchlist.html
@@ -19,7 +19,7 @@
     <th>Review</th>
   </tr>
   {% comment %} Add the data below this line {% endcomment %}
-  {% for film in list_film %}
+  {% for film in data_film %}
       <tr>
           <th>{{film.watched}}</th>
           <th>{{film.title}}</th>
