--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block meta %}
+{% block content %}
 <title>Assigment 4 : To Do List!</title>
 
 <h5>Username : </h5>
