--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -6,9 +6,10 @@
 
 {% block content %}
 
-<div class = "login">
+<div class = "login" ALIGN="center">
 
-    <h1>Login</h1>
+    <h1>Welcome Aboard! 👋</h1>
+    <p>Please Login</p>
 
     <form method="POST" action="">
         {% csrf_token %}
