--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -1,27 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<title>Assigment 4 : To Do List!</title>
+<div class = "todolist" ALIGN="center">
+    <h1>Assigment 4 : To Do List! 📚 </h1> 
+</div>
 
-<h5>Username : </h5>
-<p>{{username}}</p>
+<h3>Username : {{username}} Todo's </h3>
 
-<button><a href="{% url 'todolist:create' %}">Add task</a></button>
-<button><a href="{% url 'todolist:logout' %}">Logout</a></button>
-<table>
-    <tr>
-      <th>Date</th>
-      <th>Task</th>
-      <th>Description</th>
+<button style="margin-bottom: 20px;"><a href="{% url 'todolist:create' %}">Add task</a></button>
+
+<table style="width:100%;border:1px solid rgb(0, 0, 0)">
+    <tr style="border:1px solid black; text-align: center; background-color: rgb(148, 191, 243);">
+        <td style="border:1px solid black">Date</td>
+      <td style="border:1px solid black">Task</td>
+      <td style="border:1px solid black">Description</td>
     </tr>
-    {% comment %} Add the data below this line {% endcomment %}
-    {% for todo in list_todolist %}
-        <tr>
-            <th>{{todo.date}}</th>
-            <th>{{todo.title}}</th>
-            <th>{{todo.description}}</th>
+
+    {% for todo in list_todos %}
+        <tr style="border:1px solid black">
+            <td style="border:1px solid black">{{todo.date}}</td>
+            <td style="border:1px solid black">{{todo.title}}</td>
+            <td style="border:1px solid black">{{todo.description}}</td>
         </tr>
     {% endfor %}
   </table>
+  <div class = "logout" ALIGN="center">
+    <button style="margin-top: 20px;"><a href="{% url 'todolist:logout' %}">Logout</a></button>
+  </div>
+
+
+  
 
 {% endblock content %}
