--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -9,7 +9,7 @@
 <div class = "login" ALIGN="center">
 
     <h1>Welcome Aboard! 👋</h1>
-    <p>Please Login</p>
+    <p>Please Enter Your Username</p>
 
     <form method="POST" action="">
         {% csrf_token %}
