--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -5,42 +5,96 @@
 {% endblock meta %}
 
 {% block content %}
+<section class="background-radial-gradient overflow-hidden">
+    <style>
+      .background-radial-gradient {
+        background-color: hsl(218, 41%, 15%);
+        background-image: radial-gradient(650px circle at 0% 0%,
+            hsl(260, 30%, 45%) 15%,
+            hsl(269, 41%, 30%) 35%,
+            hsl(281, 41%, 20%) 75%,
+            hsl(275, 40%, 19%) 80%,
+            transparent 100%),
+          radial-gradient(1250px circle at 100% 100%,
+            hsl(265, 41%, 45%) 15%,
+            hsl(243, 41%, 30%) 35%,
+            hsl(271, 41%, 20%) 75%,
+            hsl(278, 40%, 19%) 80%,
+            transparent 100%);
+      }
+  
+      #radius-shape-1 {
+        height: 220px;
+        width: 220px;
+        top: -60px;
+        left: -130px;
+        background: radial-gradient(#44006b, #ad1fff);
+        overflow: hidden;
+      }
+  
+      #radius-shape-2 {
+        border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+        bottom: -60px;
+        right: -110px;
+        width: 300px;
+        height: 300px;
+        background: radial-gradient(#44006b, #ad1fff);
+        overflow: hidden;
+      }
+  
+      .bg-glass {
+        background-color: hsla(0, 0%, 100%, 0.9) !important;
+        backdrop-filter: saturate(200%) blur(25px);
+      }
+    </style>
 
-<div class = "login" ALIGN="center">
+    <div class="vh-100 ">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card bg-secondary text-white" style="border-radius: 1rem;" >
+            <div class="card-body p-5 text-center">
 
-    <h1>Welcome Aboard! 👋</h1>
-    <p>Please Enter Your Username</p>
+                <div class="mb-md-5 mt-md-4 pb-5">
 
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td><input type="text" name="username" placeholder="Username" class="form-control"></td>
-            </tr>
-                    
-            <tr>
-                <td>Password: </td>
-                <td><input type="password" name="password" placeholder="Password" class="form-control"></td>
-            </tr>
+                    <h2 class="fw-bold mb-2 text-uppercase">LOGIN</h2>
+                    <p class="text-white-50 mb-10">Please enter your username and password!</p>
 
-            <tr>
-                <td></td>
-                <td><input class="btn login_btn" type="submit" value="Login"></td>
-            </tr>
-        </table>
-    </form>
-
-    {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}     
         
-    Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Buat Akun</a>
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        <div class="form-outline form-white mb-2">
+                            <p>Email</p>
+                            <input type="text" name="username" placeholder="Username" class="form-control">
+                        </div>
+                                
+                        <div class="form-outline form-white mb-2">
+                            <p>Password</p>
+                            <input type="password" name="password" placeholder="Password" class="form-control">
+                        </div>
+            
+                        <div class="form-outline form-white mb-2">
+                            
+                            <input class="btn btn-outline-light btn-lg px-5" type="submit" value="Login">
+                        </div>
+                        
+                        
+                    </form>
+                
+                    {% if messages %}
+                        <ul>
+                            {% for message in messages %}
+                                <li>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}     
+                        
+                    Don't have an account?  <a href="{% url 'todolist:register' %}">Buat Akun</a>
 
-</div>
+                </div>
+            </div>
+        </div>
+        </div>
+</section>
+
 
 {% endblock content %}
