--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -5,7 +5,6 @@
 {% endblock meta %}
 
 {% block content %}
-<section class="background-radial-gradient overflow-hidden">
     <style>
       .background-radial-gradient {
         background-color: hsl(218, 41%, 15%);
@@ -47,6 +46,7 @@
         backdrop-filter: saturate(200%) blur(25px);
       }
     </style>
+ <body class="background-radial-gradient overflow-hidden"></body>
 
     <div class="vh-100 ">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -94,7 +94,7 @@
             </div>
         </div>
         </div>
-</section>
+</body>
 
 
 {% endblock content %}
