--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -16,6 +16,7 @@
 
 </style>
 
+
 <body style="background-color: rgb(65, 57, 103);">
 <div>
 
@@ -36,7 +37,7 @@
     </div>
 
 
-\    <div class="grid-container" >
+    <div class="grid-container" >
       {% for todo in list_todos %}
         <div class="grid-container"  >
           <div class="card" style="width: 18rem;">
