--- a/todolist/templates/todolist_ajax.html
+++ b/todolist/templates/todolist_ajax.html
@@ -20,7 +20,9 @@
       
     <script type="text/javascript" language="javascript">
     $(document).ready(function() {
-        $.get("http://127.0.0.1:8000/todolist/json/", "https://dinaherokuver.herokuapp.com/todolist/json/", function(todolist) {
+        $.get("http://127.0.0.1:8000/todolist/json/", function(todolist) {
+            console.log(todolist)
+            print(todolist)
             for (i = 0; i < todolist.length; i++){
                 $(".task_print").append(` <div class="grid-container">
                 <div class="card" style="width: 18rem;">
@@ -35,7 +37,7 @@
             }
         });
         $("#click").click(function(){
-          $.post("http://127.0.0.1:8000/todolist/create-ajax/", "https://dinaherokuver.herokuapp.com/todolist/json/",{
+          $.post("http://127.0.0.1:8000/todolist/create-ajax/",{
             title : $('#title').val(),
             description: $('#description').val()},
             function (result) {
