--- a/todolist/templates/todolist_ajax.html
+++ b/todolist/templates/todolist_ajax.html
@@ -44,11 +44,11 @@
             function (result) {
                 console.log(result)
             
-              $(".task_list").append(` <div class="grid-container"> <div class="card" style="max-width: 18rem;">
+              $(".task_print").append(` <div class="grid-container"> <div class="card" style="max-width: 18rem;">
                   <div class="card-body">
-                    <h5 class="card-title">${result.fields.title}</h5>
-                    <p class="card-text">${result.fields.date}</p>
-                    <p class="card-text">${result.fields.description}</p>
+                    <h5 class="card-title">${result.title}</h5>
+                    <p class="card-text">${result.date}</p>
+                    <p class="card-text">${result.description}</p>
                   </div>`)
               $('#title').val(''),
               $('#description').val('')
